<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wish List</string>
    <string name="logo">Wishlist logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="name">Your name</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_web_search">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
</resources>